--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <ul id="menu">
         <li> <a href="index.html">  Home </a>
         </li>
-        <li> <a href="amor.html">  Contato </a>
+        <li> <a href="contato.html">  Contato </a>
         </li>
     </ul>
 
@@ -22,18 +22,18 @@
         <div>
             <form>
                 <label for="nome">Nome:</label> <br>
-                <input type="text" id="nome">
-                <br>
+                <input type="text" id="nome" onkeyup="validateName()">
+                <div class="s-10" id="txtName"></div>
                 <br>
                 <label for="email">E-mail:</label> <br>
-                <input type="text" id="email">
-                <br>
+                <input type="text" id="email" onkeyup="validateEmail()">
+                <div class="s-10" id="txtEmail"></div>
                 <br>
                 <label for="assunto">Assunto:</label> <br>
-                <textarea name="assunto" id="assunto" cols="60" rows="5" ></textarea>
+                <textarea name="assunto" id="assunto" onkeyup="validateAssunto()" cols="60" rows="5" ></textarea>
+                <div class="s-10" id="txtAssunto"></div>
                 <br>
-                <br>
-                <button>Enviar</button>
+                <button onclick="send()">Enviar</button>
             </form>      
         </div>
 
@@ -53,7 +53,10 @@
             height="250" 
             style="border:0;" 
             allowfullscreen="" 
-            loading="lazy">
+            loading="lazy"
+            onmousemove="mapaZoom()"
+            onmouseout="mapaNormal()"
+            id="mapa">
             </iframe>
         </div>
         </div>
@@ -72,6 +75,8 @@
         </div>
         Todos os direitos reservados: Nicole Xavier &copy;
     </footer>
+
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
